--- a/_posts/2018-08-05-学习-swift-语言4.markdown
+++ b/_posts/2018-08-05-学习-swift-语言4.markdown
@@ -9,10 +9,25 @@ tags: [效率] # add tag
 
 ### 1.增加Xcode编译时使用的线程数
 
+打开命令行执行以下命令
+```shell
 defaults write com.apple.Xcode PBXNumberOfParallelBuildSubtasks 4
-
+```
 XCode默认使用与CPU核数同样的线程来进行编译，但因为编译过程中的IO操作往往比CPU运算要多，因此适当的提升线程数能够在一定程度上加快编译速度。根据自己电脑的CPU核数，将线程数增加后编译速度略有提升。
 
-### Pour-over blue bottle woke listicle
+### 2.将Debug Information Format改为DWARF
 
-Swift是iOS，macOS，watchOS和tvOS应用程序开发的新编程语言。尽管如此，Swift的许多部分对您在C和Objective-C中的开发经验都很熟悉。    雨燕提供了自己的所有基本C和Objective-C类型的版本，包括Int为整数，Double并Float为浮点值，Bool布尔值，并String为文本数据。雨燕还提供了三种主要类型的集合强大的版本Array，Set和Dictionary，如在集合类型。    与C一样，Swift使用变量来存储和通过标识名称引用值。Swift还广泛使用其值无法更改的变量。这些被称为常量，并且比C中的常量更强大。当您使用不需要更改的值时，在整个Swift中使用常量来使代码更安全，更清晰。    除了熟悉的类型之外，Swift还引入了Objective-C中没有的高级类型，例如元组。元组使您可以创建和传递值的分组。您可以使用元组将函数中的多个值作为单个复合值返回。    Swift还引入了可选类型，它们处理缺少值。选配说要么“有是一个值，它等于X    ”或“有没有一个价值可言”。使用optionals类似于nil在Objective-C中使用指针，但它们适用于任何类型，而不仅仅是类。选项对象比nilObjective-C中的指针更安全，更具表现力，它们是许多Swift最强大功能的核心。    Swift是一种类型安全的语言，这意味着该语言可以帮助您清楚代码可以使用的值的类型。如果您的部分代码需要a    String，则类型安全会阻止您Int错误地传递它。同样，类型安全性可防止您意外地将可选项传递String给需要非可选项的代码String。类型安全性可帮助您在开发过程中尽早捕获并修复错误。
+在project相应Target的Build Settings中，找到Debug Information Format这一项，将Debug时的DWARF with dSYM file改为DWARF。
+这一项设置的是是否将调试信息增加到可执行文件里，改为DWARF后，假设程序崩溃，将无法输出崩溃位置相应的函数堆栈，但因为Debug模式下能够在XCode中查看调试信息。所以改为DWARF影响并不大。
+这一项更改完之后，能够大幅提升编译速度。
+须要注意的是，将Debug Information Format改为DWARF之后。会导致在Debug窗体无法查看相关类类型的成员变量的值。当须要查看这些值时，能够将Debug Information Format改回DWARF with dSYM file，clean（必须）之后又一次编译就可以。
+
+### 3.将Build Active Architecture Only改为Yes
+
+在project相应Target的Build Settings中，找到Build Active Architecture Only这一项，将Debug时的No改为Yes。
+
+这一项设置的是是否仅编译当前架构的版本号，假设为No，会编译全部架构的版本号。须要注意的是，此选项在Release模式下必须为No。否则公布的ipa在部分设备上将不能执行。
+
+这一项更改完之后，能够显著提高编译速度。
+
+### 4. 以上为搜集资料，未完待续
