--- a/_posts/2018-08-04-学习-swift-语言3.markdown
+++ b/_posts/2018-08-04-学习-swift-语言3.markdown
@@ -29,7 +29,7 @@ tags: [iOS组件化] # add tag
    //将本地代码加入本地仓库里
    git add .
 
-   //提交修改到本地仓库
+   >//提交修改到本地仓库
    git commit -m '你的修改记录'
    
    //查看当前的远程连接
@@ -50,6 +50,7 @@ tags: [iOS组件化] # add tag
 ```
  
 注:
+
      * 正常情况下本地验证一般没问题, 远程验证正常情况下会有问题
      * 本地验证不会验证s.source后面的tag
      * 远程验证会验证tag, 而至此我们的tag还没有设置, 所以验证不会通过, 需要打标签
@@ -58,10 +59,10 @@ tags: [iOS组件化] # add tag
 ##### 3.tag对应库的版本号标签设置
 
 ```ruby
-  //查看当前的tag值
+  \/\/查看当前的tag值
   git tag
 
-  //设置tag值
+  \/\/设置tag值
   git tag "0.0.1"
 
   //上传提交tag
