--- a/_posts/2018-08-04-学习-swift-语言3.markdown
+++ b/_posts/2018-08-04-学习-swift-语言3.markdown
@@ -26,10 +26,10 @@ tags: [iOS组件化] # add tag
 最后提交代码到远程仓库
 
 ```ruby
-   //将本地代码加入本地仓库里
+   //:将本地代码加入本地仓库里
    git add .
 
-   >//提交修改到本地仓库
+   //提交修改到本地仓库
    git commit -m '你的修改记录'
    
    //查看当前的远程连接
@@ -59,10 +59,10 @@ tags: [iOS组件化] # add tag
 ##### 3.tag对应库的版本号标签设置
 
 ```ruby
-  \/\/查看当前的tag值
+  //:查看当前的tag值
   git tag
 
-  \/\/设置tag值
+  //:设置tag值
   git tag "0.0.1"
 
   //上传提交tag
