--- a/_posts/2018-08-04-学习-swift-语言3.markdown
+++ b/_posts/2018-08-04-学习-swift-语言3.markdown
@@ -17,7 +17,39 @@ tags: [iOS组件化] # add tag
 
 ```ruby
    Pod::Spec.new do |s|
-   
+    s.name          = 'XXXX' #项目名
+    s.version       = '0.1.0' #相应的版本号
+    s.summary       = 'A short description of XXXX.' #简述
+    s.description   = <<‐ DESC #详细描述
+    TODO: Add long description of the pod here.
+                      DESC
+    s.homepage      = 'https://github.com/XXXX/XXXX' #项目主页
+    s.license       = { :type => 'MIT', :file => 'LICENSE' } #开源协议
+    s.author        = { 'XXXX' => 'xxxxxx@xxx.com' } #作者
+    s.platform      = :ios, '8.0' #支持的平台
+    s.requires_arc  = true #arc和mrc选项
+    s.libraries     = 'z', 'sqlite3' #表示依赖的系统类库，比如libz.dylib等
+    s.frameworks    = 'UIKit','AVFoundation' #表示依赖系统的框架
+    s.ios.vendored_frameworks = 'Base/Base.framework' # 依赖的第三方/自己的framework
+    s.vendored_libraries = 'Library/Classes/libWeChatSDK.a' #表示依赖第三方/自己的静态库（比如libWeChatSDK.a）
+    #依赖的第三方的或者自己的静态库文件必须以lib为前缀进行命名，否则会出现找不到的情况，这一点非常重要
+
+    #平台信息
+    s.platform      = :ios, '7.0'
+    s.ios.deployment_target = '7.0'
+
+    #文件配置项
+    s.source        = { :git => 'https://github.com/XXXX/xxxx.git', :tag => s.version.to_s }
+    #配置项目的目标路径，如果不是本地开发，pod init/update会从这个路去拉去代码
+
+    s.source_files = 'XXXXX/Classes/**/*' #你的源码位置
+    s.resources     = ['XXXXX/Assets/*'] #资源，比如图片，音频文件等
+    s.public_header_files = 'XXXXX/Classes/XXXXX.h'   #需要对外开放的头文件
+
+    #依赖的项目内容 可以多个
+    s.dependency 'MJExtension'
+    s.dependency 'AFNetworking'
+end
 
 ```
 
@@ -26,7 +58,7 @@ tags: [iOS组件化] # add tag
 最后提交代码到远程仓库
 
 ```ruby
-   //将本地代码加入本地仓库中
+   //将本地代码加入本地仓库里
    git add .
 
    //提交修改到本地仓库
@@ -59,7 +91,7 @@ tags: [iOS组件化] # add tag
 ##### 3.tag对应库的版本号标签设置
 
 ```ruby
-  //:查看当前的tag值
+  //查看当前的tag值
   git tag
 
   //设置tag值
@@ -111,5 +143,5 @@ tags: [iOS组件化] # add tag
 
 查看当前配置
 ```ruby
-   $ git config --list
+   $git config --list
 ```
