--- a/_posts/2019-05-10-脚本-python笔记.markdown
+++ b/_posts/2019-05-10-脚本-python笔记.markdown
@@ -3,7 +3,7 @@ layout: post
 title: 学习swift语言1
 date: 2018-08-02 00:00:00 +0300
 description: You’ll find this post in your `_posts` directory. Go ahead and edit it and re-build the site to see your changes. # Add post description (optional)
-img: apple_swift.jpg # Add image post (optional)
+img: jackzc-python2.jpg # Add image post (optional)
 tags: [学习] # add tag
 ---
 
